--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
     "@types/ws": "^8.5.14",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   },
   "dependencies": {
@@ -25,7 +27,6 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
-    "ts-node": "^10.9.2",
     "ws": "^8.18.1"
   }
 }
