--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cr_docs_t/dts": "^0.0.5",
     "@tailwindcss/vite": "^4.1.17",
-    "daisyui": "^5.4.7",
-    "react": "^19.0.0",
+    "daisyui": "^5.5.0",
+    "react": "^19.2.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.3",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "typescript-eslint": "^8.46.4",
+    "vite": "^6.4.1"
   }
 }
