--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cr_docs_t/dts": "link:/home/mads/projects/Typescript/applied_crdt/CRDocsT-dts",
+    "@cr_docs_t/dts": "^0.0.10",
     "@tailwindcss/vite": "^4.1.17",
     "daisyui": "^5.5.0",
     "react": "^19.2.0",
