--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
     "@cr_docs_t/dts": "^0.0.10",
+    "@lexical/react": "^0.38.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@uiw/react-codemirror": "^4.25.3",
+    "codemirror": "^6.0.2",
     "daisyui": "^5.5.0",
+    "lexical": "^0.38.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "use-editable": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
