--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@cr_docs_t/dts": "link:/home/mads/projects/Typescript/applied_crdt/CRDocsT-dts",
+    "@cr_docs_t/dts": "^0.0.11",
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
