--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "NODE_ENV='production'; tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "NODE_ENV='production'; npm run build && cd ./dist && surge"
   },
   "dependencies": {
-    "@cr_docs_t/dts": "^0.0.12",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@cr_docs_t/dts": "^0.0.12",
     "@lexical/react": "^0.38.2",
     "@tailwindcss/vite": "^4.1.17",
     "@uiw/react-codemirror": "^4.25.3",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
@@ -32,8 +34,10 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^15.14.0",
+    "surge": "^0.24.6",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.46.4",
-    "vite": "^6.4.1"
+    "vite": "^6.4.1",
+    "vite-plugin-static-copy": "^3.1.4"
   }
 }
